# appimage-type2-runtime-rs

./: Cargo.toml  README.md
src/: main.rs
